moving over to google forms

--- a/src/components/templates/template-form/template-form.scss
+++ b/src/components/templates/template-form/template-form.scss
@@ -3,12 +3,16 @@
 .template-form {
 
   width: 100%;
-  min-height: 100vh;
+  max-height: 100vh;
   background-color: $color--alpha;
   padding-top: rem(80px);
 
-  &__item {
-
+  &__iframe {
+    width: 100%;
+    height: calc(100vh - #{rem(80px)});
+    margin: 0;
+    padding: 0;
+    border: 0;
   }
 
 }
